# sutro

./: README.md  flake.nix  gleam.toml  package-lock.json  package.json
.github/workflows/: docker.yml  integration.yml  pages.yml
assets/: dev.css  index.html  sunset.css
nix/gleam/: build-gleam-package.nix  default.nix  fetch-hex-deps.nix
nix/gleam/hooks/: default.nix  gleam-config-hook.sh
relay/: Cargo.toml  README.md  flake.nix  go.mod  go.sum  main.go
relay/src/: main.rs
rust-relay/: Cargo.toml  flake.nix
rust-relay/src/: main.rs
src/: sunset.gleam
src/sunset/: libp2p.ffi.mjs  libp2p.gleam  model.gleam  nav.ffi.mjs  nav.gleam  router.gleam  view.gleam
src/sunset/view/: chat.gleam  dev.gleam  home.gleam  peers.gleam  room.gleam
test/integration/: audio.test.mjs  chat.test.mjs  helpers.mjs  package.json  setup.mjs
