[package]
name = "sunset-relay"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "relay"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
futures = "0.3"
libp2p = { version = "0.56", features = [
    "tokio",
    "noise",
    "macros",
    "tcp",
    "quic",
    "dns",
    "websocket",
    "identify",
    "yamux",
    "relay",
    "ed25519",
    "request-response",
    "json",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
